--- a/package.json
+++ b/package.json
@@ -39,9 +39,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "inversify": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
+    "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.6",
     "tslog": "^4.8.2",
     "uuid": "^9.0.0"
