fix: update ignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /prisma/dev.db
 
 /.idea
+/logs.txt
+/package-lock.json
+
 # Keep environment variables out of version control
-.env
-logs.txt
+/.env
