--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"removeComments": true,
 		"sourceMap": true,
 		"strict": true,
+		"noImplicitAny": true,
 		"esModuleInterop": true,
 		"strictPropertyInitialization": false,
 		"forceConsistentCasingInFileNames": true,
