--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
     "generate": "npx prisma generate",
     "db": "npx prisma studio"
   },
-  "keywords": ["typescript", "express", "prisma", "sqlite"],
+  "keywords": [
+    "typescript",
+    "express",
+    "prisma",
+    "sqlite"
+  ],
   "author": "<serj.elessar@gmail.com> Sergei Chevdar",
   "license": "ISC",
   "devDependencies": {
@@ -22,6 +27,7 @@
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
+    "@types/node": "^20.4.2",
     "@types/nodemailer": "^6.4.8",
     "@types/uuid": "^9.0.2",
     "chalk": "^4.1.2",
@@ -29,6 +35,8 @@
     "nodemon": "^2.0.22",
     "prisma": "^4.16.2",
     "ts-node": "^10.9.1",
+    "inversify": "^6.0.1",
+    "reflect-metadata": "^0.1.13",
     "typescript": "^5.1.6"
   },
   "dependencies": {
@@ -40,11 +48,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "inversify": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.3",
-    "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.1.6",
     "tslog": "^4.8.2",
     "uuid": "^9.0.0"
