--- a/.env
+++ b/.env
@@ -7,4 +7,5 @@ SMTP_USER=stark.elessar.farm0@gmail.com
 SMTP_PASSWORD=yomutozsxebtosbs
 JWT_ACCESS=8444cf1bc4f24c58972c72414d575e9b
 JWT_REFRESH=ab9504dd47ce41129091dda8b5fad23f
+JWT_ACTIVATE=1a79a4d60de6718e8e5b326e338ae533
 DATABASE_URL=file:./dev.db
