--- a/package.json
+++ b/package.json
@@ -24,19 +24,23 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.4.2",
+    "@types/node-fetch": "^2.6.10",
     "@types/nodemailer": "^6.4.8",
     "@types/uuid": "^9.0.2",
     "chalk": "^4.1.2",
+    "inversify": "^6.0.1",
+    "jest": "^29.7.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22",
     "prisma": "^4.16.2",
-    "ts-node": "^10.9.1",
-    "inversify": "^6.0.1",
     "reflect-metadata": "^0.1.13",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
@@ -47,6 +51,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "email-existence": "^0.1.6",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
